cmake_minimum_required(VERSION 3.23)
project(aula1)

set(CMAKE_CXX_STANDARD 14)

add_executable(a1e1 Helloworld.cpp)
add_executable(a1e4 aula1e4.cpp)
add_executable(a1e123 aula1e123.cpp)
add_executable(a1e5 aula1e5.cpp)
add_executable(a1e6 a1e6.cpp)
add_executable(a1e7 a1e7.cpp)
add_executable(a1e8 a1e8.cpp)
add_executable(a1e9 a1e9.cpp)
add_executable(a1e10 a1e10.cpp)